crates/iktia-core/tests/fixtures/conformance/rejected/removed-signal.wc.tsx
import { signal } from "@iktia/core"

export function RemovedSignal() {
  const count = signal(0)

  return <button>{count()}</button>
}
